# LearningEngine

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Editor/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
Editor/Properties/: AssemblyInfo.cs
EditorWrapper/: CMakeLists.txt
EditorWrapper/Source/: EditorEngine.cs  EditorWrapperModule.cs  EditorWrapperModulePINVOKE.cs
EditorWrapperModule/: CMakeLists.txt  EditorWrapperModule.cpp  EditorWrapperModule.h  EngineWrapperFile.cpp  interface.i
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Marco.h
Engine/Platform/: DXWindow.cpp  DXWindow.h  DXWindow.ixx  DXWindowHelper.ixx  Win32Application.cpp  Win32Application.h  Win32Application.ixx
Engine/RHI/: d3dx12.h
Engine/Render/: Render.h  Render.ixx
